--- a/MyProject/public/js/kindeditor/examples/url-type.html
+++ b/MyProject/public/js/kindeditor/examples/url-type.html
@@ -31,21 +31,21 @@
 	<body>
 		<h3>相对URL</h3>
 		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/images/0.gif" /><br />
+内部连接：<img border="0" src="../plugins/emoticons/images/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
 </textarea>
 		<h3>绝对URL</h3>
 		<textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/images/0.gif" /><br />
+内部连接：<img border="0" src="../plugins/emoticons/images/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
 </textarea>
 		<h3>绝对URL（包含域名）</h3>
 		<textarea id="content3" name="content" style="width:700px;height:200px;visibility:hidden;">
-内部连接：<img border="0" src="./../plugins/emoticons/images/0.gif" /><br />
+内部连接：<img border="0" src="../plugins/emoticons/images/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
