--- a/web/resign.html
+++ b/web/resign.html
@@ -61,7 +61,7 @@
       </div>
       <br>
       <div class="am-input-group am-animation-slide-left log-animation-delay">       
-        <input name="password" type="password" id="log-password" class="am-form-field am-radius log-input" placeholder="密码" minlength="11" required>
+        <input name="password" type="password" id="log-password" class="am-form-field am-radius log-input" placeholder="密码" minlength="6" required>
         <span class="am-input-group-label log-icon am-radius"><i class="am-icon-lock am-icon-sm am-icon-fw"></i></span>
       </div>
       <br>   
@@ -100,8 +100,9 @@
 <script src="js/app.js"></script>
 <script>
   var resign=document.getElementById("submit");
-  resign.onclick=function(){
-    window.location="index.html"
+  resign.onclick=function(e){
+    e.preventDefault();
+    window.location.href="index.html"
   }
 </script>
 </body>
