--- a/web/index.html
+++ b/web/index.html
@@ -27,8 +27,8 @@
         <img width="200" src="http://s.amazeui.org/media/i/brand/amazeui-b.png" alt="Amaze UI Logo"/>
         <h2 class="am-hide-sm-only">中国首个开源 HTML5 跨屏前端框架</h2>
         <div id="log-no">
-            <a href="login.html" class="am-btn am-btn-default am-radius">登录</a>
-            <a href="resign.html" class="am-btn am-btn-primary am-radius">注册</a>
+            <a href="login.html" class="am-btn am-btn-default am-radius" id="log">登录</a>
+            <a href="resign.html" class="am-btn am-btn-primary am-radius" id="re">注册</a>
         </div>
         <div id="log-yes" style="display: none;">
             <span id="email"></span>
@@ -128,35 +128,35 @@
     <div class="am-g am-g-fixed blog-fixed am-u-sm-centered blog-footer-padding">
         <div class="am-u-sm-12 am-u-md-4- am-u-lg-4">
             <h3>仙女棒前台页面</h3>
-            <p class="am-text-sm">这是一个使用amazeUI做的简单的前端模板。<br> 博客/ 资讯类 前端模板 <br> 支持响应式，多种布局，包括主页、文章页、媒体页、分类页等<br>哈哈<br><br>
+            <p class="am-text-sm">这是一个使用amazeUI做的简单的前端模板。<br> 博客/ 资讯类 前端模板 <br> 支持响应式，多种布局，主要是用来练习获取后台页面数据的<br>哈哈<br><br>
                 Amaze UI 使用 MIT 许可证发布，用户可以自由使用、复制、修改、合并、出版发行、散布、再授权及贩售 Amaze UI 及其副本。</p>
         </div>
         <div class="am-u-sm-12 am-u-md-4- am-u-lg-4">
             <h3>社交账号</h3>
             <p>
-                <a href=""><span class="am-icon-qq am-icon-fw am-primary blog-icon blog-icon"></span></a>
+                <a href="#"><span class="am-icon-qq am-icon-fw am-primary blog-icon blog-icon"></span></a>
                 <a href="https://github.com/JingJingaaaa"><span class="am-icon-github am-icon-fw blog-icon blog-icon"></span></a>
-                <a href=""><span class="am-icon-weibo am-icon-fw blog-icon blog-icon"></span></a>
-                <a href=""><span class="am-icon-reddit am-icon-fw blog-icon blog-icon"></span></a>
-                <a href=""><span class="am-icon-weixin am-icon-fw blog-icon blog-icon"></span></a>
+                <a href="#"><span class="am-icon-weibo am-icon-fw blog-icon blog-icon"></span></a>
+                <a href="#"><span class="am-icon-reddit am-icon-fw blog-icon blog-icon"></span></a>
+                <a href="#"><span class="am-icon-weixin am-icon-fw blog-icon blog-icon"></span></a>
             </p>
             <h3>Credits</h3>
-            <p>我们追求卓越，然时间、经验、能力有限。Amaze UI 有很多不足的地方，希望大家包容、不吝赐教，给我们提意见、建议。感谢你们！</p>
+            <p>努力追求卓越，然而时间、经验、能力有限。有很多不足的地方，希望大家包容、不吝赐教，提意见、建议。感谢你们！</p>
         </div>
         <div class="am-u-sm-12 am-u-md-4- am-u-lg-4">
             <h1>仙女静要努力</h1>
             <h3>不要在该奋斗的年纪选择了安逸</h3>
             <p>
                 <ul>
-                    <li>jQuery</li>
-                    <li>BOOTSTRAP</li>
-                    <li>VUE.js</li>
-                    <li>LESS</li>
+                    <li>JavaScript</li>
+                    <li>BootStrap</li>
+                    <li>AngularJS</li>
+                    <li>NodeJS</li>
                 </ul>
             </p>
         </div>
     </div>
-    <div class="blog-text-center">© 2015 AllMobilize, Inc. Licensed under MIT license. Made with love By LWXYFER</div>
+    <div class="blog-text-center">©  AllMobilize, Inc. Licensed under MIT license. Made with love By LWXYFER</div>
 </footer>
 
 
@@ -222,6 +222,15 @@
 
             }
         })
+        var E=sessionStorage.getItem("email");
+        var login=document.getElementById("log");
+        var resign=document.getElementById("re");
+        if(E){
+            login.innerHTML="亲爱的"+E+",欢迎您";
+            resign.style.display="none";
+        }
+
+
     }
 </script>
 </body>
