--- a/web/login.html
+++ b/web/login.html
@@ -57,13 +57,13 @@
                 <div class="am-input-group am-radius am-animation-slide-left">
                     <input name="email" type="email" id="doc-vld-email-2-1" class="am-radius" data-validation-message="请输入正确邮箱地址"
                             placeholder="邮箱" required/>
-                    <span class="am-input-group-label log-icon am-radius"><i
+                    <span class="am-input-group-label log-icon am-radius" id="span1"><i
                             class="am-icon-user am-icon-sm am-icon-fw"></i></span>
                 </div>
                 <br>
                 <div class="am-input-group am-animation-slide-left log-animation-delay">
-                    <input type="password" name="password" class="am-form-field am-radius log-input" placeholder="密码" minlength="6" required>
-                    <span class="am-input-group-label log-icon am-radius"><i
+                    <input type="password" name="password" id="password" class="am-form-field am-radius log-input" placeholder="密码" minlength="11" required>
+                    <span class="am-input-group-label log-icon am-radius" id="span2"><i
                             class="am-icon-lock am-icon-sm am-icon-fw"></i></span>
                 </div>
                 <br>
@@ -82,7 +82,7 @@
         </div>
     </div>
     <footer class="log-footer">
-        © 2014 AllMobilize, Inc. Licensed under MIT license.
+        © AllMobilize, Inc. Licensed under MIT license.
     </footer>
 </div>
 
@@ -100,10 +100,31 @@
 
 <script>
   var login=document.getElementById("submit");
-    login.onclick=function(e){
-        e.preventDefault();
-        window.location.href="index.html"
-    }
+  var email=document.getElementById("doc-vld-email-2-1");
+  var password=document.getElementById("password");
+  var span1=document.getElementById("span1");
+  var span2=document.getElementById("span2");
+
+  login.onclick= function (e) {
+      e.preventDefault();
+      var user=email.value;
+      var pwd=password.value;
+      var E=sessionStorage.getItem("email");
+      var P=sessionStorage.getItem("password");
+      console.log(E,P)
+      if(user!==E){
+          alert("用户名不存在")
+          email.value="";
+          password.value="";
+      }else if(pwd!==P){
+          alert("密码错误，请重新输入")
+          email.value="";
+          password.value="";
+      }else{
+          window.location.href="index.html"
+      }
+  }
+
 </script>
 </body>
 </html>
