--- a/web/resign.html
+++ b/web/resign.html
@@ -82,7 +82,7 @@
   </div>
   </div>
   <footer class="log-footer">   
-    © 2014 AllMobilize, Inc. Licensed under MIT license.
+    © AllMobilize, Inc. Licensed under MIT license.
   </footer>
 </div>
 
@@ -100,10 +100,19 @@
 <script src="js/app.js"></script>
 <script>
   var resign=document.getElementById("submit");
-  resign.onclick=function(e){
+  var email=document.getElementById("doc-vld-email-2-1");
+  var password=document.getElementById("log-password");
+
+  resign.onclick= function (e) {
     e.preventDefault();
-    window.location.href="index.html"
+    sessionStorage.setItem('email', email.value);
+    sessionStorage.setItem('password', password.value);
+    window.location.href="index.html";
   }
+
+
+
+
 </script>
 </body>
 </html>
